# facecam-ubuntu

./: .gitignore  Cargo.toml  README.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  device_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
config/: 99-facecam.rules  daemon.toml  facecam-daemon.service  v4l2loopback-load.conf  v4l2loopback.conf
crates/facecam-common/: Cargo.toml
crates/facecam-common/src/: device.rs  diagnostics.rs  formats.rs  ipc.rs  lib.rs  profiles.rs  quirks.rs  recovery.rs  types.rs  usb.rs  v4l2.rs
crates/facecam-ctl/: Cargo.toml
crates/facecam-ctl/src/: main.rs
crates/facecam-daemon/: Cargo.toml
crates/facecam-daemon/src/: config.rs  ipc_server.rs  main.rs  pipeline.rs  watchdog.rs
crates/facecam-harness/: Cargo.toml
crates/facecam-harness/src/: main.rs
crates/facecam-probe/: Cargo.toml
crates/facecam-probe/src/: main.rs
crates/facecam-visual/: Cargo.toml
crates/facecam-visual/src/: capture.rs  main.rs  overlays.rs
docs/: book.toml
docs/src/: SUMMARY.md  custom.css  introduction.md
docs/src/architecture/: ipc.md  overview.md  pipeline.md  quirks.md
docs/src/development/: building.md  contributing.md  fuzzing.md
docs/src/device/: compatibility.md  controls.md  firmware.md  specs.md  usb.md
docs/src/getting-started/: hardware.md  installation.md  quick-start.md
docs/src/operations/: diagnostics.md  profiles.md  troubleshooting.md
docs/src/tools/: ctl.md  daemon.md  harness.md  probe.md  visual.md
fuzz/: gen_corpus.py
fuzz/corpus/ipc_parse/: apply_profile  export_diag  force_reset  get_all  get_control  nested  set_control  status  unicode
fuzz/corpus/profile_parse/: bad_types  deep_nest  huge_dims  negative_ctrl  valid_default
fuzz/corpus/usb_descriptor/: camlink4k  facecam_409  facecam_usb2  huge_res  mjpg_720p30  mk2  nv12_1080p30  unknown_fmt  uyvy_1080p60  yuyv_540p60  zero_fps
fuzz/corpus/v4l2_parse/: ctrl_bool  ctrl_brightness  ctrl_contrast  ctrl_disabled  ctrl_huge_menu  ctrl_menu  ctrl_negative  no_nulls  real_facecam
fuzz/targets/: Cargo.toml
fuzz/targets/src/: fuzz_firmware_bcd.rs  fuzz_format_fourcc.rs  fuzz_ipc_command.rs  fuzz_profile_parse.rs  fuzz_v4l2_controls.rs  fuzz_v4l2_querycap.rs
research/: technical-memo.md
