[package]
name = "facecam-common"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
rusb.workspace = true
libc = "0.2"
