[package]
name = "facecam-ctl"
version.workspace = true
edition.workspace = true

[[bin]]
name = "facecam-ctl"
path = "src/main.rs"

[dependencies]
facecam-common.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros"] }
