[package]
name = "facecam-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "facecam-daemon"
path = "src/main.rs"

[dependencies]
facecam-common.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
chrono.workspace = true
nix.workspace = true
