[package]
name = "facecam-probe"
version.workspace = true
edition.workspace = true

[[bin]]
name = "facecam-probe"
path = "src/main.rs"

[dependencies]
facecam-common.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusb.workspace = true
